# karamd

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  recurring.example.yml  reschedule.example.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
scripts/: next-parity.sh
src/: analyze.rs  due.rs  lib.rs  main.rs  next.rs  output.rs  query.rs  reschedule.rs  rule.rs  run.rs  run_spawn.rs  task.rs  terminal.rs  validate.rs  verbs.rs  web.rs  web_terminal.rs
tasks/: 001-replace-deprecated-serde-yaml-with-a-maintained-ya.md  002-validate-rules-file-reject-duplicate-keys-and-malf.md  003-add-today-override-to-generate-for-backfill-and-te.md  004-provide-a-nix-flake-and-overlay-for-karamd.md  005-pin-prebuilt-nix-binary-hashes-after-first-release.md  007-optional-per-rule-body-for-generated-tasks.md  008-taskmd-compatible-read-write-library-and-cli.md  009-web-ui-to-view-and-edit-tasks.md  010-embedded-ai-execution-of-tasks-in-web-ui.md  011-verbs-list-query-and-machine-output.md  012-ranked-next-task-mode.md  013-manage-recurring-rules-in-web-ui.md  014-port-remaining-taskmd-commands.md  015-validate-command.md  016-restructure-cli-into-subcommands-generate-becomes.md  017-claude-skill-marketplace-documenting-karamd-and-ta.md  018-monthly-trigger-due-lead-days-before-a-fixed-day-o.md  019-verify-karamd-web-over-tailscale-remote-access-tai.md  020-finalize-nix-web-deps-hash-for-packages-karamd-web.md  021-persistent-server-side-claude-sessions-and-three-p.md  022-today-view-ongoing-this-week-group-order-is-unstab.md  (+34 more)
(+36 files in other folders)
