[package]
name = "karamd"
version = "0.1.2"
edition = "2024"
description = "Recurring-task generator for a taskmd markdown vault"
license = "MIT"

[lib]
name = "karamd"
path = "src/lib.rs"

[[bin]]
name = "karamd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_norway = "0.9"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
