[package]
name = "karamd"
version = "0.6.0"
edition = "2024"
description = "Recurring-task generator for a taskmd markdown vault"
license = "MIT"

[lib]
name = "karamd"
path = "src/lib.rs"

[[bin]]
name = "karamd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
# ws now so the embedded-AI follow-up (#010) needs no re-platform.
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.6", features = ["fs"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
